--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,900" rel="stylesheet" />
     <!-- Meta -->
-    <title>Goose Finance</title>
+    <title>Clawly Swap</title>
     <meta
       name="description"
-      content="Flip EGG, and stake them with Goose Finance, the best decentralized exchange on Binance Smart Chain.y"
+      content="Lite version decentralized exchange on Binance Smart Chain.y"
     />
     <meta name="theme-color" content="#000000" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
