--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no" />
     <meta name="twitter:image" content="https://clawlyswap.netlify.app/images/egg/hero.png" />
-    <meta name="twitter:description" content="Together We Moon 🚀.y" />
+    <meta name="twitter:description" content="Together We Moon 🚀 " />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="⚡️ Clawly Swap - Lite version decentralized exchange on Binance Smart Chain.y" />
+    <meta name="twitter:title" content="⚡️ Clawly Swap - Lite version decentralized exchange on Binance Smart Chain " />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
