--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no" />
-    <meta name="twitter:image" content="https://clawlyswap.netlify.app/images/egg/hero.png" />
+    <meta name="twitter:image" content="https://bsclawlyswap.netlify.app/images/egg/hero.png" />
     <meta name="twitter:description" content="Together We Moon 🚀 " />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="⚡️ Clawly Swap - Lite version decentralized exchange on Binance Smart Chain " />
