--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,900" rel="stylesheet" />
     <!-- Meta -->
-    <title>Clawly Swap</title>
+    <title>Jembut Swap</title>
     <meta
       name="description"
       content="Lite version decentralized exchange on Binance Smart Chain.y"
@@ -19,10 +19,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no" />
-    <meta name="twitter:image" content="https://xclawlycswap.netlify.app/images/egg/hero.png" />
-    <meta name="twitter:description" content="Together We Moon 🚀 " />
+    <meta name="twitter:image" content="https://jembutkuswap.netlify.app/images/egg/hero.png" />
+    <meta name="twitter:description" content="Together We Rug🙏" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="⚡️ Clawly Swap - Lite version decentralized exchange on Binance Smart Chain " />
+    <meta name="twitter:title" content="Jembut Swap - Lite version decentralized exchange on Binance Smart Chain " />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
